# rust-vector-databases

./: .gitignore  Cargo.toml  Makefile  README.md  compose.yml
.github/workflows/: ci.yml
contracts/: vec-rust-v1.yaml
crates/vec-aprender/: Cargo.toml
crates/vec-aprender/src/: lib.rs
crates/vec-cli/: Cargo.toml
crates/vec-cli/examples/: aprender_film_search.rs  qdrant_film_search.rs
crates/vec-cli/src/: lib.rs  main.rs
crates/vec-core/: Cargo.toml
crates/vec-core/src/: lib.rs
crates/vec-embed/: Cargo.toml
crates/vec-embed/src/: lib.rs
crates/vec-qdrant/: Cargo.toml
crates/vec-qdrant/src/: lib.rs
crates/vec-search/: Cargo.toml
crates/vec-search/src/: lib.rs
data/: films.json
