[workspace]
members = [
    "crates/vec-core",
    "crates/vec-embed",
    "crates/vec-qdrant",
    "crates/vec-search",
    "crates/vec-aprender",
    "crates/vec-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paiml/rag-from-zero"
homepage = "https://github.com/paiml/rag-from-zero"
authors = ["Noah Gift <noah@paiml.com>"]
rust-version = "1.95"

[workspace.dependencies]
# Local crates — referenced by sibling members so vec-cli can pull them all in.
vec-core = { path = "crates/vec-core", version = "0.1.0" }
vec-embed = { path = "crates/vec-embed", version = "0.1.0" }
vec-qdrant = { path = "crates/vec-qdrant", version = "0.1.0" }
vec-search = { path = "crates/vec-search", version = "0.1.0" }
vec-aprender = { path = "crates/vec-aprender", version = "0.1.0" }

# Shared dependencies
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Course-specific stack
aprender-rag = "0.31.2"
qdrant-client = "1.17"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
