[package]
name = "vec-aprender"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "In-process RAG film-search pipeline built on aprender-rag (no Docker, no model download)"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
aprender-rag.workspace = true
vec-qdrant.workspace = true
