[package]
name = "vec-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "clap binary + end-to-end demo examples for the c13 vector course"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vec-aprender.workspace = true
vec-embed.workspace = true
vec-qdrant.workspace = true

[[bin]]
name = "vec-cli"
path = "src/main.rs"

[[example]]
name = "aprender_film_search"
path = "examples/aprender_film_search.rs"

[[example]]
name = "qdrant_film_search"
path = "examples/qdrant_film_search.rs"
