[package]
name = "vec-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Distance metrics, vector types, and shared error types"

[dependencies]
thiserror.workspace = true
