[package]
name = "vec-embed"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Embedder trait + deterministic HashEmbedder for teaching"

[dependencies]
thiserror.workspace = true
vec-core.workspace = true
