[package]
name = "vec-search"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Reciprocal-rank fusion + filtered-query helpers for hybrid search"

[dependencies]
